Fix UT of ConstructorMethodRefTest
There seems to be bugs in org.junit.jupiter.api.BeforeEach of JUnit 5 at this moment.
It cannot guarantee the annotated method being excuted before each test method.

References:
- https://github.com/junit-team/junit5/issues/2360
- https://github.com/junit-team/junit5/issues/378