@@ -1,23 +1,17 @@
 package net.will.javatest.basicconcept.jdk8;
 
 import net.will.javatest.basicconcept.Person;
-import org.junit.jupiter.api.BeforeEach;
 import org.junit.jupiter.api.Test;
 
-import java.util.*;
+import java.util.HashSet;
+import java.util.List;
+import java.util.Set;
 
 import static org.junit.jupiter.api.Assertions.assertEquals;
 
 public class ConstructorMethodRefTest {
-    private List<Person> roster = Collections.emptyList();
-    
-    @BeforeEach
-    public void setup() {
-        roster = new ArrayList<>();
-        roster.add(new Person("person01"));
-        roster.add(new Person("person02"));
-    }
-    
+    private final List<Person> roster = List.of(new Person("person01"), new Person("person02"));
+
     @Test
     public void testLambdaExpression() {
         Set<Person> rosterSetLambda = ConstructorMethodRef.transferElements(roster, () -> {
